--- a/angular.json
+++ b/angular.json
@@ -12,8 +12,9 @@
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-          "index": "src/index.html",
+	  "options": {
+            "outputPath": "dist/find-in-my-city",
+	    "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": [
               "zone.js"
